	- refactored scripts/gff2bed.pl
	- added Moose-based classes for feature handling	
	- renamed bed2bw() to bam_or_bed2bw() and refactored it accordingly to
	  properly handle BAM files
	- added '-split' option to 'genomeCoverageBed' call in
	  bam_or_bed2bw()
	- updated MakeMaker scripts (MANIFEST and Makefile.PL)
	- minimum version of Bio::Root::Version is now 1.00690001
	- added some tests
	- ship demo files in share/ folder
	- updated POD and README
	
0.12 Wed Feb 11 2015
	- requires Perl >= 5.10.0
	- minimum version of Bio::DB::Sam is 1.37
	- integrated Bio::ViennaNGS::Bam
	- integrated Bio::ViennaNGS::BamStat
	- integrated Bio::ViennaNGS::BamStatSummary
	- integrated Bio::ViennaNGS::Bed
	- integrated Bio::ViennaNGS::ExtFeature
	- integrated Bio::ViennaNGS::SpliceJunc
	- integrated Bio::ViennaNGS::Tutorial
	- integrated Bio::ViennaNGS::UCSC
 	- integrated Bio::ViennaNGS::FeatureLine
	- added scripts/assembly_hub_generator.pl
	- added scripts/bam_quality_stat.pl
	- added scripts/Tutorial_pipeline00.pl
	- added scripts/Tutorial_pipeline01.pl
	- added scripts/Tutorial_pipeline02.pl
	- added scripts/Tutorial_pipeline03.pl
	- added scripts/track_hub_constructor.pl
	- renamed Bio::ViennaNGS.pm to Bio::ViennaNGS::Util.pm
	- migrated BAM specific code from Bio::ViennaNGS::Util 
	  to Bio::ViennaNGS::Bam
	- migrated expression/normalization code from Bio::ViennaNGS::Util
	  to Bio::ViennaNGS::Expression
	- refactored scripts/normalize_multicov.pl
	- removed scripts/motiffinda.pl from distribution
	- added static templates for the Assembly and Track Hub generator
	- updated POD and README 

0.13 Thu Feb 14 2015
	- fixed an issue in Bio::ViennaNGS::FeatureChain
	- updated POD

0.14 Tue Feb 24 2015
	- updated mkdircheck() 
	- updated rmdircheck()
	- fixed directory creation in bam_split.pl
	- updated POD in Tutorials

0.15_01
	- fixed path creation in bed_or_bam2bw()
	- fixed scalar initialization bug
	- scripts/bam_to_bigwig.pl can now produce normalized bigWigs